pod1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-a
  template:
    metadata:
      labels:
        app: webserver-a
    spec:
      containers:
      - name: webserver
        image: nginx
        ports:
        - containerPort: 80
