np-block-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-to-webserver-a
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: webserver-a
  policyTypes:
  - Ingress
