np-block-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-to-webserver-b
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: webserver-b
  policyTypes:
  - Ingress
